# guess-game-inkathon

./: README.md  pnpm-lock.yaml
contracts/: Cargo.toml
contracts/deployments/greeter/: alephzero-testnet.ts  greeter.contract  greeter.json  greeter.wasm
contracts/deployments/guess_secret/: alephzero-testnet.ts  guess_secret.contract  guess_secret.json  guess_secret.wasm
contracts/scripts/: deploy.ts
contracts/src/guess-secret/: Cargo.toml  lib.rs
contracts/src/guess_secret/: Cargo.toml  lib.rs
frontend/src/app/: layout.tsx
frontend/src/app/components/: home-page-title.tsx
frontend/src/components/web3/: greeter-contract-interactions.tsx
frontend/src/deployments/: deployments.ts
