[package]
name = "guess-secret"
version = "0.0.1"
authors = ["esteblock"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42", features = [
    "full_crypto",
] }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
